--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     </header>
 
     <main class="container">
-      <section class="banner"></section>
 
+      <div class="frete">
+        <p>Mês de setembro - frete grátis para todo Brasil!</p>
+      </div>
+      <section class="banner"></section>
       <section id="inicio">
         <h1>Encontre seu estilo</h1>
 
