add transition effects in submit button

--- a/trabalheConosco.html
+++ b/trabalheConosco.html
@@ -65,11 +65,11 @@
 
             <label for="comentario">Deixe seu comentário:</label>
             <div>
-              <textarea name="comentario" id="comentário" cols="80" rows="10" >Comentário</textarea>
+              <textarea name="comentario" id="comentário" cols="30" rows="10" >Comentário</textarea>
             </div>
 
             <label>Currículo:</label>
-            <div>
+            <div class="curriculo">
               <input type="file" name="curriculo" accept=".pdf">
             </div>
 
