--- a/trabalheConosco.html
+++ b/trabalheConosco.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <header class="container">
-      <img src="./img/logo-color.png" alt="Logo" />
+      <a href="./index.html" class="logo">
+        <img src="./img/logo-color.png" alt="Logo" />
+      </a>
       <nav>
         <a href="#" class="nav-link">Todos os produtos</a>
         <a href="#" class="nav-link">Coleções</a>
